Added Swagger using Springdocs-openApi for API documentation